k8s/gateway/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: kgateway   
      namespace: college-ns       

  # hostnames:
  #   - grafana.yourdomain.com   # optional (recommended)

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - name: monitoring-grafana
          port: 80
