k8s/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: duniversity-route 
  namespace: college-ns
spec:
  parentRefs:
    - name: kgateway
  rules:
    - matches: 
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: duniversity-service
          port: 80
